menuinfo: Fix editing local .desktop files which are symlinks It appears that previously, when a .desktop file being modified was a symlink, the file properties menu would copy the symlink itself rather than the file, leaving behind a symlink that cannot be modified by the menu editor. This is fixed by checking if the local file is a symlink and if so, removing it to copy and edit.

I have investigated and it seems like the menu editor does not copy the symlink, but copies the file appropriately — it would just get stuck when such a symlink already existed locally.

BUG: 394476